# deeplearning-playground

./: pyproject.toml
fundamentals/ein/: einops-1.ipynb  einops-2.ipynb  einsum.ipynb
